@@ -1,0 +1,8 @@
+package org.testng.internal.issue2195;
+
+import org.testng.annotations.Test;
+
+@Test(groups = "issue2195")
+public class TestClass extends BaseClass {
+  public TestClass() {}
+}
