@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE suite SYSTEM "http://testng.org/testng-1.0.dtd">
+<suite name="suite" parallel="methods" verbose="2">
+    <test name="test">
+        <classes>
+            <class name="org.testng.internal.MethodHelperTest"/>
+        </classes>
+    </test> <!-- test -->
+</suite> <!-- suite -->
